# DBML_SQLite

./: .coveralls.yml  .gitignore  LICENSE  LICENSE.md  README.md  README.rst  READMEnew.rst  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dbml_sqlite/: __init__.py  core.py  terminal.py
dbml_sqlite/UNKNOWN.egg-info/: PKG-INFO
tests/: abc.dbml  example.db  example2.db  output.sql  test.db  test.dbml  test2.dbml  test_dbml_sqlite.py  test_terminal.py
