[tool.poetry]
name = "DBML_SQLite"
version = "0.1.0"
description = ""
authors = ["Dave VanderWeele <weele.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydbml = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
coveralls = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
