[tool.poetry]
name = "DBML_SQLite"
version = "0.3.0"
description = "A package that provides a CLI tool and a functional API for converting dbml files to SQLite DDL."
authors = ["Dave VanderWeele <weele.me@gmail.com>"]
repository = 'https://github.com/dvanderweele/DBML_SQLite'
documentation = 'https://github.com/dvanderweele/DBML_SQLite/blob/main/README.md'
keywords = ['dbml', 'sqlite', 'ddl', 'sqlite3', 'data definition language']
license = 'MIT'
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
pydbml = "^0.3.4"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
coveralls = "^3.0.1"

[tool.poetry.scripts]
dbml_sqlite = 'dbml_sqlite.terminal:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
